fix: truncate group name if its length exceeds twenty characters

--- a/style/group.css
+++ b/style/group.css
@@ -92,6 +92,7 @@ button.group-function:hover {
 
 .group-status {
   width: 1rem;
+  min-width: 1rem;
   background-color: rgb(247, 199, 139);
   border-top-left-radius: var(--sidebar-border-radius);
   border-bottom-left-radius: var(--sidebar-border-radius);
